add Link to GitHub

--- a/info_sharing_app/templates/info_sharing_app/readme.html
+++ b/info_sharing_app/templates/info_sharing_app/readme.html
@@ -12,10 +12,10 @@
                 4つの基本機能(Create, Read, Update, Delete)に加えて、認証機能が組み込まれています。
             </li>
             <li>
-                サーバサイド開発に焦点を当てているため、HTML/CSSは非常にシンプルなコードになっております。個人で活動していた際にサンプルとして公開していたWebページ(<a href="https://orangeahiru.com/sample/sample1">サンプル1</a>, <a href="https://orangeahiru.com/sample/sample2">サンプル2</a>)があるため、必要に応じてご覧いただけますと幸いです。
+                サーバサイド開発に焦点を当てているため、HTML/CSSは非常にシンプルなコードになっております。個人で活動していた際にサンプルとして公開していたWebページ(<a href="https://orangeahiru.com/sample/sample1" target="_blank">サンプル1</a>, <a href="https://orangeahiru.com/sample/sample2" target="_blank">サンプル2</a>)があるため、必要に応じてご覧いただけますと幸いです。
             </li>
             <li>
-                <a href="">GitHubへのリンク</a>
+                <a href="https://github.com/ricky-goodtime/info_sharing_app/tree/master/info_sharing_app" target="_blank">GitHubへのリンク</a>
             </li>
         </ul>
     </div>
