add Links to Tutorial and Document

--- a/info_sharing_app/templates/info_sharing_app/readme.html
+++ b/info_sharing_app/templates/info_sharing_app/readme.html
@@ -37,8 +37,8 @@
         <h2>学習に使ったもの</h2>
         <ol>
             <li>Pythonの基本書３冊</li>
-            <li>Django Girls Tutorial</li>
-            <li>Django 公式ドキュメント</li>
+            <li><a href="https://tutorial.djangogirls.org/en/" target="_blank">Django Girls Tutorial</a></li>
+            <li><a href="https://docs.djangoproject.com/en/3.1/" target="_blank">Django 公式ドキュメント</a></li>
         </ol>
         <ul>
             <li>
